Fix image sizing for header image on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,20 +22,31 @@ h2 {
 }
 
 h1 {
-    font-size: 120px;
+    font-size: 100px;
     font-weight: bold;
 }
 
 p {
-    font-size: x-large;
+    font-size: large;
 }
 
 /* Header image */
 
 .d-block {
-    width: 200px;
-    height: 600px;
+    width: 100%;
+    min-width: 200px;
+    height: 100%;
+    max-height: 600px;
     border-radius: 20px;
+}
+
+#services {
+    margin-top: 40px;
+}
+
+h2 {
+    font-size: 60px;
+    font-weight: bold;
 }
 
 /* Buttons */
